--- a/feginLearn/src/main/resources/application.yml
+++ b/feginLearn/src/main/resources/application.yml
@@ -1,12 +1,9 @@
-eureka:  
+eureka:
   client:
     serviceUrl:
       defaultZone: http://sjg:123456@localhost:8761/eureka/
 server:
-  port: 8763
+  port: 8765
 spring:
   application:
-    name: service-hi
-ribbon:
-  eureka:
-    enabled: true
+    name: service-feign
