--- a/myCenter/src/main/resources/application.yml
+++ b/myCenter/src/main/resources/application.yml
@@ -3,8 +3,18 @@ server:
 eureka:
   instance:
     hostname: localhost
+    status-page-url: http://${spring.cloud.client.ipAddress}:${server.port}/swagger-ui.html
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: false #代表不向注册中心注册自己
+    fetchRegistry: false #注册中心的职责就是维护服务实例，他并不需要去检索服务
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      defaultZone: http://sjg:123456@${eureka.instance.hostname}:${server.port}/eureka/
+
+#  权限控制
+spring:
+   security:
+      basic:
+         enabled: true #开启认证
+      user:
+         name: sjg #用户名
+         password: 123456 #密码
